--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -101,7 +101,7 @@
                     />
 
                 <EditText
-                    style="@style/tint1"
+                    style="@style/hint1"
                     android:id="@+id/nameText"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
@@ -138,7 +138,7 @@
                     />
 
                 <EditText
-                    style="@style/tint1"
+                    style="@style/hint1"
                     android:id="@+id/ageText"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
@@ -177,7 +177,7 @@
                     />
 
                 <EditText
-                    style="@style/tint1"
+                    style="@style/hint1"
                     android:id="@+id/heightText"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
@@ -216,7 +216,7 @@
                     />
 
                 <EditText
-                    style="@style/tint1"
+                    style="@style/hint1"
                     android:id="@+id/weightText"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
