--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -87,7 +87,7 @@
                     />
 
                 <TextView
-                    style="@style/tint1"
+                    style="@style/hint1"
                     android:id="@+id/actions"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
