--- a/app/src/main/res/layout/fragment_main_1.xml
+++ b/app/src/main/res/layout/fragment_main_1.xml
@@ -44,7 +44,7 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                android:src="@drawable/weight_icon"
+                android:src="@drawable/steps_icon"
                 android:layout_marginEnd="7dp"
                 android:layout_marginTop="7dp"
                 />
