--- a/app/src/main/res/layout/medicines_item.xml
+++ b/app/src/main/res/layout/medicines_item.xml
@@ -41,7 +41,7 @@
             />
 
         <TextView
-            style="@style/tint1"
+            style="@style/hint1"
             android:id="@+id/date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -53,7 +53,7 @@
             />
 
         <TextView
-            style="@style/tint1"
+            style="@style/hint1"
             android:id="@+id/day"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -65,7 +65,7 @@
             />
 
         <TextView
-            style="@style/tint1"
+            style="@style/hint1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
