--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -38,10 +38,10 @@
         <item name="android:textColor">@color/textcolor_white</item>
     </style>
 
-    <style name="tint1">
+    <style name="hint1">
         <item name="fontFamily">@font/inter_medium</item>
         <item name="android:textSize">16sp</item>
-        <item name="android:textColor">@color/tint_color_night</item>
+        <item name="android:textColorHint">@color/tint_color_night</item>
     </style>
 
 </resources>
