--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -42,10 +42,10 @@
         <item name="android:textColor">@color/textcolor_blue</item>
     </style>
 
-    <style name="tint1">
+    <style name="hint1">
         <item name="fontFamily">@font/inter_medium</item>
         <item name="android:textSize">16sp</item>
-        <item name="android:textColor">@color/tint_color</item>
+        <item name="android:textColorHint">@color/tint_color</item>
     </style>
 
 </resources>
