--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -42,6 +42,24 @@
         <item name="android:textColor">@color/textcolor_blue</item>
     </style>
 
+    <style name="buttonTextStyle2">
+        <item name="fontFamily">@font/inter_semibold</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">@color/textcolor_white</item>
+    </style>
+
+    <style name="buttonTextStyle3">
+        <item name="fontFamily">@font/inter_medium</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/textcolor_black</item>
+    </style>
+
+    <style name="buttonTextStyleChoosen3">
+        <item name="fontFamily">@font/inter_medium</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/textcolor_white</item>
+    </style>
+
     <style name="hint1">
         <item name="fontFamily">@font/inter_medium</item>
         <item name="android:textSize">16sp</item>
