--- a/app/src/main/res/layout/fragment_nutrition.xml
+++ b/app/src/main/res/layout/fragment_nutrition.xml
@@ -77,7 +77,6 @@
                 app:layout_constraintEnd_toEndOf="@id/margin_main2"
                 android:text="@string/articles"
                 android:layout_marginTop="23dp"
-                android:background="@android:color/transparent"
                 />
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -122,13 +121,12 @@
                     app:layout_constraintTop_toTopOf="@id/article1"
                     app:layout_constraintEnd_toEndOf="@id/article1"
                     android:text="Сокращение потребления соли"
-                    android:background="@android:color/transparent"
                     android:layout_marginTop="28dp"
                     android:layout_marginStart="6dp"
                     />
 
                 <TextView
-                    style="@style/tint1"
+                    style="@style/hint1"
                     android:layout_width="0dp"
                     android:layout_height="19dp"
                     app:layout_constraintStart_toEndOf="@id/imageSalt"
@@ -183,19 +181,17 @@
                     app:layout_constraintTop_toTopOf="@id/foodArticle"
                     app:layout_constraintEnd_toEndOf="@id/article2"
                     android:text="Питайтесь правильно\nСамые вредные продукты"
-                    android:background="@android:color/transparent"
                     android:layout_marginTop="28dp"
                     android:layout_marginStart="6dp"
                     />
 
                 <TextView
-                    style="@style/tint1"
+                    style="@style/hint1"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     app:layout_constraintStart_toEndOf="@id/imageFood"
                     app:layout_constraintBottom_toBottomOf="@id/foodArticle"
                     android:text="30 июня 2016 г."
-                    android:background="@android:color/transparent"
                     android:layout_marginBottom="28dp"
                     android:layout_marginStart="6dp"
                     />
@@ -244,19 +240,17 @@
                     app:layout_constraintTop_toTopOf="@id/KalArticle"
                     app:layout_constraintEnd_toEndOf="@id/article3"
                     android:text="Сколько каллорий можно потреблять в день"
-                    android:background="@android:color/transparent"
                     android:layout_marginStart="6dp"
                     android:layout_marginTop="28dp"
                     />
 
                 <TextView
-                    style="@style/tint1"
+                    style="@style/hint1"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     app:layout_constraintStart_toEndOf="@id/imageKal"
                     app:layout_constraintBottom_toBottomOf="@id/KalArticle"
                     android:text="30 июня 2016 г."
-                    android:background="@android:color/transparent"
                     android:layout_marginBottom="28dp"
                     android:layout_marginStart="6dp"
                     />
